# ChangeLog for media-sound/easytag
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/easytag/ChangeLog,v 1.25 2004/04/30 01:36:27 eradicator Exp $

  29 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  easytag-0.31_pre2-r3.ebuild, files/easytag-0.31_pre2-gcc2.patch:
  Yet another gcc2 fix closing bug #49427.  Thanks again Tristan.

*easytag-0.31_pre2-r3 (27 Apr 2004)

  27 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  easytag-0.31_pre2-r3.ebuild:
  Bumping the version of the gtk2 patch. Provided by Daniel Drake
  <dsd@gentoo.org> in bug #49156

  22 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  easytag-0.31_pre2-r2.ebuild, files/easytag-0.30.2-gcc2.patch:
  gcc2 compilation fix thanks to Tristan Henderson <T.Henderson@cs.ucl.ac.uk> in
  bug #48672.

*easytag-0.31_pre2-r2 (13 Apr 2004)

  13 Apr 2004; Seemant Kulleen <seemant@gentoo.org>
  easytag-0.31_pre2-r1.ebuild, easytag-0.31_pre2-r2.ebuild:
  updated GTK2 patch from Daniel Drake <dsd@gentoo.org> in bug #47728

*easytag-0.31_pre2-r1 (09 Apr 2004)

  09 Apr 2004; Seemant Kulleen <seemant@gentoo.org>
  easytag-0.31_pre2-r1.ebuild, easytag-0.31_pre2.ebuild:
  nls fix thanks again to Daniel Drake, fixing bug #47373 by Jordan
  <lx_xero@comcast.net>

  09 Apr 2004; Seemant Kulleen <seemant@gentoo.org> easytag-0.30c.ebuild,
  easytag-0.30d.ebuild, easytag-0.31_pre2.ebuild:
  fix depend string, thanks to daniel in irc

*easytag-0.31_pre2 (09 Apr 2004)

  09 Apr 2004; Seemant Kulleen <seemant@gentoo.org> easytag-0.31_pre2.ebuild,
  files/easytag-0.30.2-fix-configure.patch:
  version bump to easytag-0.30.2, which is named 0.31_pre2 here because of
  portage's version thingy which thinks 0.30d is a higher version than 0.30.2.
  Included in this version is optional GTK2 support thanks to the venerable
  Daniel Drake! Look for him to be a Gentoo developer soon, anyway. So, this was