@@ -1,13 +1,11 @@
-MD5 be788633d67209bef46c6117793fc81e easytag-0.31_pre2-r2.ebuild 1876
+MD5 39f711bdbd78709ed4e438cc1f091c8e easytag-0.31_pre2-r4.ebuild 1833
 MD5 4b3530d67c2f286baea4cf70a36e57f3 easytag-0.30d.ebuild 1598
 MD5 12389512059b5b2ab253fce895914002 easytag-0.31_pre2-r3.ebuild 1873
-MD5 bb581b933b5ec0e4238fedc55168fedc easytag-0.30c.ebuild 1480
-MD5 7cc6cadd494455c83826538b06ff4b8f ChangeLog 5042
+MD5 730af8a06a0c29eaf169fb08c68107dd ChangeLog 5424
 MD5 b8ca490eb4cbf24dca497d295311e4ac metadata.xml 317
 MD5 25444660393147e2d06a5f1378a89ec4 files/easytag-0.31_pre2-gcc2.patch 2763
-MD5 dfb4c4e7aee1e1bb0711c1b60f6178fb files/digest-easytag-0.31_pre2-r2 142
 MD5 b09d2fabe3663dc7f13cfa6c9e1e4715 files/digest-easytag-0.31_pre2-r3 142
-MD5 e032b0a7fe4897ec0e7dad2ef9002639 files/digest-easytag-0.30c 278
+MD5 fde1835ab2e1a7d45eb477ee62304485 files/digest-easytag-0.31_pre2-r4 142
 MD5 0dc3e112a9f2e10861c7608a584f9423 files/digest-easytag-0.30d 349
 MD5 a767d8be7a9435927acebb4b1ca9df4c files/easytag-0.30.2-fix-configure.patch 648
 MD5 5630250004c7a1257a3a170ab8bb749f files/easytag-0.30.2-gcc2.patch 11999
