@@ -1,4 +1,0 @@
-MD5 9f0dfde219c0422676f21afc49cc44bf easytag-0.30.tar.bz2 1094337
-MD5 210c0e49ad524181420a481b214a5917 patch_easytag_030_030a.diff 4382
-MD5 d38d94d319471c8b051f76df71de66e9 patch_easytag_030a_030b.diff 9160
-MD5 f48e07056ebd5d4b7b960d8f787c4f12 patch_easytag_030b_030c.diff 6036
