@@ -1,2 +1,0 @@
-MD5 5e80c60db9eda3c3dfc79110359c0554 easytag-0.30.2.tar.bz2 1049767
-MD5 e1d6994f12712ebf1b3efb919d958535 easytag-0.30.2-dsd3.patch.bz2 169866
