@@ -1,0 +1,2 @@
+MD5 5e80c60db9eda3c3dfc79110359c0554 easytag-0.30.2.tar.bz2 1049767
+MD5 69fa5461705e4601ee166b704bcb6af9 easytag-0.30.2-dsd5.patch.bz2 185740
